--- a/static/style/blue/base.css
+++ b/static/style/blue/base.css
@@ -5657,7 +5657,7 @@ button.bg-dark:focus {
 .py-0 {
   padding-top: 0 !important; }
 
-.pr-0,
+.pr-0, .ui-portlet-section .portlet-content,
 .px-0 {
   padding-right: 0 !important; }
 
@@ -5695,7 +5695,7 @@ button.bg-dark:focus {
 .py-2 {
   padding-top: 0.5rem !important; }
 
-.pr-2,
+.pr-2, .ui-portlet .portlet-content, .ui-portlet-section .portlet-content, .ui-portlet-plain .portlet-content,
 .px-2 {
   padding-right: 0.5rem !important; }
 
@@ -5703,7 +5703,7 @@ button.bg-dark:focus {
 .py-2 {
   padding-bottom: 0.5rem !important; }
 
-.pl-2,
+.pl-2, .ui-portlet .portlet-content, .ui-portlet-section .portlet-content, .ui-portlet-plain .portlet-content,
 .px-2 {
   padding-left: 0.5rem !important; }
 
@@ -10622,18 +10622,16 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
 
 .ui-portlet-section {
   border: none;
-  border-left: solid 3px #f8f9fa;
+  border-left: solid 3px #e9ecef;
   border-radius: 0.3125rem;
   margin-bottom: 0.375rem; }
   .ui-portlet-section .portlet-header {
-    background: #f8f9fa;
+    background: #e9ecef;
     border-radius: 0.3125rem;
-    border-bottom: solid #dae0e5 1px;
+    border-bottom: solid #cbd3da 1px;
     border-bottom-left-radius: 0px;
     border-top-left-radius: 0px;
     padding: 5px; }
-  .ui-portlet-section .portlet-content {
-    padding-right: 0px; }
 
 .ui-portlet-plain {
   border: none; }
